--- a/src/index.html
+++ b/src/index.html
@@ -65,18 +65,18 @@
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br>
             <div style="display: flex; flex-direction: column;">
-                <a href="main" class="gameflair1" style="order: <%- order1 %>; margin-bottom: 5%;">Match Scouting<br></a>
-                <a href="browse" class="gameflair1" style="order: <%- order2 %>; margin-bottom: 5%;">Browse Data<br></a>
-                <a href="matches" class="gameflair1" style="order: <%- order3 %>; margin-bottom: 5%;">Match List<br></a>
-                <a href="pit" class="gameflair1" style="order: <%- order4 %>; margin-bottom: 5%;">Pit Scouting<br></a>
-                <%- additionalURLs %>
-                    <small style="order: 5"><a href="scouts" style="all: unset; margin-bottom: 5%;">Top Scouts</a></small>
-                    <small style="order: 6"><a href="points" style="all: unset; margin-bottom: 5%;">Points</a></small>
-                    <small style="order: 7"><a href="settings" style="all: unset; margin-bottom: 5%;">Settings</a></small>
+                <a href="main" class="gameflair1" style="order: 1; margin-bottom: 5%;">Match Scouting<br></a>
+                <a href="pit" class="gameflair1" style="order: 2; margin-bottom: 5%;">Pit Scouting<br></a>
+                <a href="matches" class="gameflair1" style="order: 3; margin-bottom: 5%;">Match List<br></a>
+                <a href="browse" class="gameflair1" style="order: 4; margin-bottom: 5%;">Browse Data<br></a>
+                <a href="manage" class="gameflair1" style="order: 5; margin-bottom: 5%; display: none;" id="additionalUrl">Manage Data<br></a>
+                <small style="order: 6"><a href="scouts" style="all: unset; margin-bottom: 5%;">Top Scouts</a></small>
+                <small style="order: 7"><a href="points" style="all: unset; margin-bottom: 5%;">Points</a></small>
+                <small style="order: 8"><a href="settings" style="all: unset; margin-bottom: 5%;">Settings</a></small>
             </div>
         </form>
     </div>
-    <!--<br><small><a href="offline.html" style="all: unset;">Access Offline Version</a></small>-->
+    <script src="js/homepage_client.js" type="text/javascript"></script>
     <script src="js/network_client.min.js" type="text/javascript"></script>
 </body>
 
