--- a/src/teams.html
+++ b/src/teams.html
@@ -26,13 +26,28 @@
         <!--flex is shown-->
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
-            <h4>Team Data</h4><br>
+            <h3>Team Data</h3>
             <fieldset>
                 <label>Event Code: </label><br>
                 <select name="event" id="eventCode">
                     <option value="CADA">CADA - Sacramento Regional</option>
                     <option value="CASJ">CASJ - Silicon Valley Regional</option>
                     <option value="WOOD" selected>WOOD - CalGames</option>
+                </select><br><br>
+                <select name="type" id="weightType">
+                    <option value="0" selected>standard weight</option>
+                    <option value="1">grid point weight</option>
+                    <option value="2">cube weight</option>
+                    <option value="3">cone weight</option>
+                    <option value="4">bottom row weight</option>
+                    <option value="5">middle row weight</option>
+                    <option value="6">top row weight</option>
+                    <option value="7">bottom row cube weight</option>
+                    <option value="8">bottom row cone weight</option>
+                    <option value="9">middle row cube weight</option>
+                    <option value="10">middle row cone weight</option>
+                    <option value="11">top row cube weight</option>
+                    <option value="12">top row cone weight</option>
                 </select>
             </fieldset>
             <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="viewTeamsButton" onclick="getTeamRanks()">View</button><br>
