--- a/src/teams.html
+++ b/src/teams.html
@@ -59,7 +59,7 @@
         <!--flex is shown-->
         <div class="dummy">
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
-            <h4>Match Data</h4><br>
+            <h4>Match Data</h4>
             <fieldset>
                 <fieldset>
                     <h3 id="eventCodeDisplay"></h3>
