--- a/static/settings.html
+++ b/static/settings.html
@@ -17,9 +17,8 @@
                 <h1 class="w3">bearTracks<br><span class="gametitle">settings</span></h1>
                 <button class="settingOpt std" id="changeTheme"><p>Switch Theme</p></button><br><br>
                 <button class="settingOpt std" onclick="window.location.href = '/passkey'"><p>Register Passkey</p></button><br><br>
-                <button class="settingOpt danger" onclick="window.location.href='logout'"><p>Log Out</p></button>
+                <button class="settingOpt danger" onclick="window.location.href='logout'"><p>Log Out</p></button><br><br>
                 <button class="settingOpt plain" onclick="window.location.href='/'"><p>Back</p></button>
-                <h4 style="color: var(--gameFlairColor);" id="success"></h4><h4 style="color: var(--cancelColor);" id="error"></h4>
             </div>
         </div>
         <script type="module" src="static/js/settings/settings.js"></script>
